Implement scoring system via simple session, Squash some bugs, Improve Frontend

--- a/app/views/courses/_course.haml
+++ b/app/views/courses/_course.haml
@@ -1,1 +1,1 @@
-%div.chip= link_to course.title, quizzes_path(id: course.id)
+%div.chip.purple.darken-1= link_to course.title, quizzes_path(id: course.id), class:'course-chips'
