--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,8 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $mat-ind:#0E0B16;
 $uv-sub-purp:#4717F6;
+
 html{
   background-color:$mat-ind;
+}
+#brand-logo{
+  height:35px;
+  padding-right:7px;
 }
 .title{
   font-family:"Press Start 2P";
@@ -23,4 +28,12 @@ html{
   text-align:center;
   padding-top:100px;
   padding-bottom:100px;
+}
+.course-chips{
+  text-decoration:none;
+  color: white;
+  font-size:1.3em;
+}
+.game-text{
+  font-family:"Press Start 2P";
 }
