--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <section>
       <div class='container event-container'>
         <div class= 'event-box'>
-          <p class='title flow-text'>QuizMaster!</p>
+          <p class='title flow-text'><span><%=link_to(image_tag('logo.png', id: 'brand-logo'), root_path)%></span>QuizMaster!</p>
           <div class= 'card event-card'>
             <%= yield %>
           </div>
