Add empty.haml, Fix README.md

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -7,6 +7,9 @@ $uv-sub-purp:#4717F6;
 html{
   background-color:$mat-ind;
 }
+.vert-align{
+  vertical-align:middle;
+}
 #brand-logo{
   height:35px;
   padding-right:7px;
