Show results of check after each quest, Do Documentation

--- a/app/views/questions/game_over.haml
+++ b/app/views/questions/game_over.haml
@@ -1,2 +1,4 @@
-%p GAME OVER
-%p= @display_score
+%h3.game-text.red-text GAME OVER
+%h5.game-text your final score is
+%h3.game-text= @display_score
+= render 'show_ans'
