--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -3,4 +3,6 @@
   %span= @question.content
 = form_tag question_path(@curr_quiz_id, @question.id), method: "get" do
   = text_field_tag :ans, '', class: 'ans-area'
-  = submit_tag "Submit Answer", class:'btn purple darken-1 white-text'
+  = submit_tag "Submit Answer", class:'btn purple darken-1 white-text', id:'sub-btn'
+
+= render'show_ans'
