--- a/app/views/quizzes/index.haml
+++ b/app/views/quizzes/index.haml
@@ -1,7 +1,7 @@
-%p You have been challenged by Quizmaster
+%h5 You have been challenged by Quizmaster
 %p.flow-text.game-text=@creator.user_name
 
-%p You will be answering his Quiz
+%h5 You will be answering his Quiz
 %p.flow-text.game-text=@random_quiz.title
 
 %a{href: question_path(id: @random_quiz.id), class:'waves-effect waves-light btn purple darken-1'} Start Quiz
