Write feature tests for signup and login

--- a/app/views/questions/game_over.haml
+++ b/app/views/questions/game_over.haml
@@ -1,4 +1,8 @@
 %h3.game-text.red-text GAME OVER
 %h5.game-text your final score is
-%h3.game-text= @display_score
+
+%h3
+  %span.game-text= @display_score
+  %span.game-text /
+  %span.game-text= session[:total]
 = render 'show_ans'
